master.css
/* GLOBAL STYLES */
body {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.2em;
    margin: 0;
}

code {
    background-color: #ececec;
    display: block;
    margin: 5px;
    padding: 0.5em;
}

/* SIZE-INDEPENDANT STYLES */
.all_sections {
    grid-area: all_sections;
    padding: 0.5em;
}

.navbar {
    background-color: black;
    color: white;
    grid-area: navbar;
    left: 0;
    padding: 0.5em;
    position: fixed;
    text-decoration: none;
    top: 0;
    list-style: none;

}

.navbar header {
    font-size: 1.5em;
    font-style: strong;
}

.navbar a {
    color: white;
}
.navbar a:visited {
    color: white;
}

.navbar li {
    margin: 15px;
}

/* LAYOUT FOR REGULAR COMPUTER SCREENS */
@media only screen and (min-width: 850px) {
    .master_box {
        display: grid;
        grid-template-columns: 20vw 10vw 50vw 40px;
        grid-template-rows: auto;
        grid-template-areas:
            "navbar . all_sections ."
    }

    .navbar {
        width: min-content;
    }
}

/* LAYOUT FOR PHONE SCREENS */
@media only screen and (max-width: 850px) {
    .master_box {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: 10vh 120px 90vh;
        grid-template-areas:
            "navbar"
            "."
            "all_sections"
    }

    .navbar {
        text-align: center;
        width: 100%;
    }
}

